--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@abdulrahmanazam/cli-number-guessing",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "This is a cli based number guessing game",
   "main": "index.js",
   "type": "module",
   "publishConfig": {
     "access": "public"
   },
-  "bin": "index.js",
+  "bin": {
+    "cli-number-guessing": "index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
